Better comments and login system

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,9 @@
  *= require_self
  *= require_tree .
  */
+
+#user_nav{
+	background-color:#E3E3E3;
+	border:1px solid #BDBDBD;
+	padding: 4px;
+}
