--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -15,23 +15,18 @@
 
 <h2>Comments</h2>
 <% @person.comments.each do |comment| %>
-  <p>
-    <b>Commenter:</b>
-    <%= comment.commenter %>
-  </p>
- 
-  <p>
-    <b>Comment:</b>
-    <%= comment.body %>
-  </p>
+	<div class="comment">
+		<div class="commenter">
+			<%= comment.user.name %> <small><%= comment.created_at %></small>
+		</div>
+		<div class="body">
+			<%= comment.body %>
+		</div>
+	</div>
 <% end %>
 
 <h2>Add a comment:</h2>
 <%= form_for([@person, @person.comments.build]) do |f| %>
-  <div class="field">
-    <%= f.label :commenter %><br />
-    <%= f.text_field :commenter %>
-  </div>
   <div class="field">
     <%= f.label :body %><br />
     <%= f.text_area :body %>
