--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -17,7 +17,8 @@
 <% @person.comments.each do |comment| %>
 	<div class="comment">
 		<div class="commenter">
-			<%= comment.user.name %> <small><%= comment.created_at %></small>
+			<%= comment.user.name %> <small><%=time_ago_in_words(comment.created_at)%> 
+			<%= link_to 'delete', person_comment_path(@person, comment), :confirm => 'Are you sure?', :method => :delete, :class => "" %></small>
 		</div>
 		<div class="body">
 			<%= comment.body %>
