--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -13,8 +13,14 @@
   <%= @person.phone %>
 </p>
 
+<p>
+  <b>State:</b>
+  <%= collection_select(:person, :state_id, State.all, :id, :name) %>
+</p>
+
+
 <h2>Comments</h2>
-<% @person.comments.each do |comment| %>
+<% @person.comments.reverse.each do |comment| %>
 	<div class="comment">
 		<div class="commenter">
 			<%= comment.user.name %> <small><%=time_ago_in_words(comment.created_at)%> 
@@ -30,7 +36,7 @@
 <%= form_for([@person, @person.comments.build]) do |f| %>
   <div class="field">
     <%= f.label :body %><br />
-    <%= f.text_area :body %>
+    <%= f.text_area :body, :cols => "60", :rows => "7" %>
   </div>
   <div class="actions">
     <%= f.submit %>
