--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -29,22 +29,25 @@
     <%= collection_select(:person, :state_id, State.all, :id, :name) %>
   </div>
 
-  <%= f.fields_for :documents do |doc_fields| %>
-    <% if doc_fields.object.new_record? %>
-    <p>
-      <%= doc_fields.file_field :doc %>
-    </p>
-    <% end %>
-  <% end %>
-  
-  <%= f.fields_for :documents do |doc_fields| %>
-    <% unless doc_fields.object.new_record? %>
+  <div class="field">
+    <%= f.label :documents %><br />
+    <%= f.fields_for :documents do |doc_fields| %>
+      <% if doc_fields.object.new_record? %>
       <p>
-        <%= link_to doc_fields.object.doc_file_name, doc_fields.object.doc.url(:original) %>
-        Delete: <%= doc_fields.check_box :_destroy %>
+        <%= doc_fields.file_field :doc %>
       </p>
+      <% end %>
     <% end %>
-  <% end %>
+    
+    <%= f.fields_for :documents do |doc_fields| %>
+      <% unless doc_fields.object.new_record? %>
+        <p>
+          <%= link_to doc_fields.object.doc_file_name, doc_fields.object.doc.url(:original) %>
+          Delete: <%= doc_fields.check_box :_destroy %>
+        </p>
+      <% end %>
+    <% end %>
+  </div>
 
   <div class="actions">
     <%= f.submit %>
