--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,8 @@
 <body>
 
 <div id="user_nav">
+  <%= link_to "People", people_path %> | <%= link_to "Email Templates", email_templates_path %>
+  <span id="user_info">
   <% if current_user %>
     Logged in as <b><%= current_user.email %></b>.
     <%= link_to "Log out", log_out_path %>
@@ -34,6 +36,7 @@
     <%= link_to "Sign up", sign_up_path %> or
     <%= link_to "log in", log_in_path %>
   <% end %>
+  </span>
 </div>
 
 <% flash.each do |name, msg| %>
