--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,17 +9,18 @@
 
 <script type="text/javascript" charset="utf-8">
   $(function () {
+
     var tabContainers = $('div.tabs > div');
     tabContainers.hide().filter(':first').show();
     
     $('div.tabs ul.tabNavigation a').click(function () {
       tabContainers.hide();
-      console.log(tabContainers.filter(this.hash))
       tabContainers.filter(this.hash).show();
       $('div.tabs ul.tabNavigation a').removeClass('selected');
       $(this).addClass('selected');
       return false;
-    }).filter(':first').click();
+    }).filter('[href|="#state_'+person_state_id+'"]').click();
+
   });
 </script>
 
