Added state controlling

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
 <body>
 
 <div id="user_nav">
-  <%= link_to "People", people_path %> | <%= link_to "Email Templates", email_templates_path %>
+  <%= link_to "People", people_path %> | <%= link_to "Email Templates", email_templates_path %> | <%= link_to "States", states_path %>
   <span id="user_info">
   <% if current_user %>
     Logged in as <b><%= current_user.email %></b>.
